<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/general_background"
    tools:context="ui.TaskActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_edit_text"
        android:background="@drawable/edit_text_background"
        android:hint="@string/title"
        android:textSize="18sp"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/general_background"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:id="@+id/description_edit_text"
        android:background="@drawable/edit_text_background"
        android:hint="@string/description"
        android:textSize="18sp"
        android:padding="8dp"
        android:gravity="start"
        android:layout_marginBottom="32dp"
        android:textColor="@color/general_background"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_update_button"
        android:text="@string/add"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:textSize="16sp"
        android:backgroundTint="#1E88E5"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:elevation="8dp"
    />

</LinearLayout>
