<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:padding="12dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/congratulations_image_view"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_congratulation"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/congratulations"
        android:textSize="36sp"
        android:textStyle="normal"
        android:textColor="@color/green"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/long_break_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text = "@string/long_break"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_gravity="start|center"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/orange"
            android:textColor="@android:color/white"
            android:gravity="center"

            />

        <Button
            android:id="@+id/short_break_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1.5"
            android:text = "@string/short_break"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"
            android:gravity="center"

            />

        <Button
            android:id="@+id/skip_break_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text = "@string/skip_break"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_gravity="end|center"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white"
            android:gravity="center"

            />


    </LinearLayout>






</LinearLayout>